# Apoch-AI

./: .gga  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  LICENSE  PROJECT_MASTER.md  PR_BODY.md  QA_REPORT_v0.9.0-alpha.md  README.md  pyproject.toml  rediseno.md  sdd
.github/workflows/: ci.yml  coverage.yml
adr/: ADR-001-orchestration.md  ADR-002-testing-strategy.md  ADR-003-evidence-source.md  ADR-004-timeouts-and-errors.md  ADR-005-api-versioning.md  ADR-007-concurrency.md  ADR-008-pulse-auto-instrumentation.md
docs/: adapters.md  architecture.md  benchmarks.md  changelog-policy.md  cli.md  configuration.md  contributing.md  core-stack.md  creating-a-new-adapter.md  development.md  faq.md  installation.md  mcp-public-api.md  quickstart.md  release-process.md  roadmap.md  testing.md  troubleshooting.md
openspec/: config.yaml
openspec/changes/PR3C - Vision Module/: design.md
openspec/changes/PR4-MCP-Adapter-Tool-Runtime/: design.md  tasks.md
openspec/changes/archive/2026-07-13-PR3A - Chronicle Foundation/: archive-report.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/core-stack-installation/: design.md  proposal.md  tasks.md
openspec/changes/diseñar la arquitectura base de Apoch-AI: estructura de módulos, sistema de plugins, integración con OpenCode y entry point principal/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/mcp-tools-redesign/: architecture-review-registration.md  design.md  implementation-readiness-pr2.md  proposal.md  tasks.md
openspec/changes/optimizer-engineering-optimization/: proposal.md  tasks.md
openspec/changes/oracle-recommendation-engine/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/pr2-dead-code-removal/: design.md  tasks.md  verify-report.md
openspec/changes/pr5-openspec-component/: design.md  proposal.md  tasks.md
openspec/changes/pr6-engram-component/: design.md  proposal.md  tasks.md
openspec/changes/pr7-context7-component/: adr-clicomponent-evaluation.md  archive-report.md  design.md  proposal.md  tasks.md
openspec/changes/pr8-codegraph-component/: design.md  proposal.md  tasks.md
openspec/changes/pulse-auto-instrumentation/: tasks.md
openspec/changes/pulse-productivity-intelligence/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/pulse-v1-compliance/: design.md  proposal.md  tasks.md
openspec/reviews/: apoch_health-boundary-review.md  apoch_history-boundary-review.md  apoch_status-boundary-review.md  pr2-acceptance-gate.md
openspec/specs/agent-adapter/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/core-stack/: spec.md
openspec/specs/module-chronicle/: spec.md
openspec/specs/module-guardian/: spec.md
openspec/specs/module-system/: spec.md
openspec/specs/module-vision/: spec.md
openspec/specs/tool-runtime/: spec.md
src/apoch/: __init__.py  __main__.py  _compat.py
src/apoch/adapters/: __init__.py  base.py  manager.py  registry.py
src/apoch/cli/: __init__.py  app.py  doctor.py  eil.py  install.py  list.py  mcp.py  output.py  stack.py  status.py  uninstall.py
src/apoch/config/: __init__.py  defaults.py  loader.py
src/apoch/core/: __init__.py  engine.py  events.py  exceptions.py  module.py  registry.py
src/apoch/modules/: __init__.py
src/apoch/public_api/: __init__.py  coordinator.py  errors.py  metrics.py  models.py  registry.py  version.py
src/apoch/stack/: __init__.py  clock.py  component.py  descriptor.py  downloader.py  events.py  exceptions.py  factory.py  lock.py  manager.py  manifest.py  paths.py  registry.py  result.py  runner.py  state.py
tests/: __init__.py  _audit_deps.py  _mcp_e2e_server.py  test_adapter_manager.py  test_adapters.py  test_cli.py  test_cli_doctor.py  test_cli_eil.py  test_cli_install.py  test_cli_mcp.py  test_config.py  test_coordinator_events.py  test_e2e_mcp.py  test_engine.py  test_engine_events.py  test_events.py  test_events_phase1.py  test_exceptions.py  test_integration_pr2.py  test_module.py  test_opencode_adapter.py  test_opencode_config.py  test_opencode_install.py  test_package.py  test_pulse_auto_instrumentation.py  test_pulse_events.py  test_registry.py
tests/e2e/: __init__.py  conftest.py  helpers.py  test_codegraph.py  test_context7.py  test_engram.py  test_infrastructure.py  test_openspec.py
tests/modules/chronicle/: __init__.py  test_module.py  test_storage.py
tests/modules/guardian/: test_guardian.py
tests/modules/optimizer/: test_detectors.py  test_models.py  test_module.py
tests/modules/oracle/: test_engine.py  test_models.py  test_module.py
tests/modules/pulse/: test_analysis.py  test_models.py  test_module.py  test_storage.py
tests/modules/vision/: test_vision.py
tests/public_api/: __init__.py  test_coordinator.py  test_errors.py  test_health.py  test_health_integration.py  test_history.py  test_history_integration.py  test_insights.py  test_insights_integration.py  test_logs_integration.py  test_metrics.py  test_models.py  test_progress.py  test_progress_integration.py  test_recommend.py  test_recommend_integration.py  test_registry.py  test_status.py  test_version.py  test_wiring.py
tests/stack/: __init__.py  _testing.py  conftest.py  test_cli_stack.py  test_clock.py  test_component.py  test_descriptor.py  test_downloader.py  test_errors.py  test_events.py  test_factory.py  test_integration_flow.py  test_isolation.py  test_lock.py  test_manager.py  test_manifest.py  test_paths.py  test_registry.py  test_result.py  test_runner.py  test_state.py
tests/stack/components/: test_codegraph.py  test_context7.py  test_engram.py  test_openspec.py
(+72 files in other folders)
