[project]
name = "apoch-ai"
version = "0.4.0-alpha"
description = "Agent-agnostic Python framework for AI-assisted development workflows"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
    "typer>=0.15",
]

[project.scripts]
apoch = "apoch.cli.app:entry_point"

[project.entry-points."apoch.modules"]
chronicle = "apoch.modules.chronicle.module:ChronicleModule"
guardian = "apoch.modules.guardian.module:GuardianModule"
vision = "apoch.modules.vision.module:VisionModule"

[project.entry-points."apoch.plugins"]
# Third-party plugins register here

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["apoch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
