[project]
name = "apoch-ai"
version = "0.7.0-alpha"
description = "Agent-agnostic Python framework for AI-assisted development workflows"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.20",
    "mcp>=1.28.1",
    "packaging>=24.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
    "typer>=0.15",
]

[project.scripts]
apoch = "apoch.cli.app:entry_point"

[project.entry-points."apoch.modules"]
chronicle = "apoch.modules.chronicle.module:ChronicleModule"
guardian = "apoch.modules.guardian.module:GuardianModule"
optimizer = "apoch.modules.optimizer.module:OptimizerModule"
oracle = "apoch.modules.oracle.module:OracleModule"
pulse = "apoch.modules.pulse.module:PulseModule"
vision = "apoch.modules.vision.module:VisionModule"

[project.entry-points."apoch.plugins"]
# Third-party plugins register here

[project.entry-points."apoch.stack.components"]
context7 = "apoch.stack.components.context7:Context7Component"
openspec = "apoch.stack.components.openspec:OpenSpecComponent"
engram = "apoch.stack.components.engram:EngramComponent"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["apoch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
