[project]
name = "apoch-ai"
version = "0.9.1-alpha"
description = "Agent-agnostic Python framework for AI-assisted development workflows"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "jsonschema>=4.20",
    "mcp>=1.28.1",
    "packaging>=24.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
    "typer>=0.15",
]

[project.scripts]
apoch = "apoch.cli.app:entry_point"

[project.entry-points."apoch.modules"]
chronicle = "apoch.modules.chronicle.module:ChronicleModule"
guardian = "apoch.modules.guardian.module:GuardianModule"
optimizer = "apoch.modules.optimizer.module:OptimizerModule"
oracle = "apoch.modules.oracle.module:OracleModule"
pulse = "apoch.modules.pulse.module:PulseModule"
vision = "apoch.modules.vision.module:VisionModule"

[project.urls]
Homepage = "https://github.com/guigerdts/Apoch-AI"
Repository = "https://github.com/guigerdts/Apoch-AI"
Documentation = "https://github.com/guigerdts/Apoch-AI/tree/main/docs"
Issues = "https://github.com/guigerdts/Apoch-AI/issues"
Changelog = "https://github.com/guigerdts/Apoch-AI/blob/main/CHANGELOG.md"

[project.entry-points."apoch.plugins"]
# Third-party plugins register here

[project.entry-points."apoch.stack.components"]
codegraph = "apoch.stack.components.codegraph:CodeGraphComponent"
context7 = "apoch.stack.components.context7:Context7Component"
engram = "apoch.stack.components.engram:EngramComponent"
openspec = "apoch.stack.components.openspec:OpenSpecComponent"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["apoch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
markers = [
    "unit: Pure logic tests with no I/O or external dependencies.",
    "integration: Tests using MockRunner to simulate CLI behaviour.",
    "e2e: Tests requiring real CLI tools installed on the system.",
    "benchmark: Performance measurement (non-blocking).",
    "slow: Tests taking more than 1 second to execute.",
    "destructive: Tests that install or uninstall tools (CI only).",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["src/apoch"]
omit = [
    "*/__pycache__/*",
    "*/_compat.py",
    "*/cli/*",
]
concurrency = ["thread"]

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
precision = 1

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
